--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'com.github.nkzawa:socket.io-client:0.6.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
 }
