--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".Service.ChatService"/>
+        <service android:name=".Service.ChatService"
+            android:process=":remote"/>
     </application>
 </manifest>
